# Hrothgor_Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  buildComponents.sh  clean.sh  imgui.ini  physics_engine
Engine/Components/: Test.cpp  Test.hpp
Engine/Ressources/: DeadTree_LoPoly.mtl  bomb.mtl  fence.mtl  house.mtl  lampadaire.mtl
Engine/Ressources/Shaders/: Light.fs  Light.vs  Particles.fs  Particles.vs  Shadow.fs  Shadow.vs
Engine/Scenes/: ColissionBox.scn  CollisionCube.scn  Copy test1.scn  Demo.scn  LampPost.scn  ParticleTest.scn  a.scn  collision.scn  fghj.scn  jsonLoadTest.scn  test1.scn  testX.scn  testsave.scn
Projects/test1/: save.json
Projects/test2/: save.json
cmake/: Findraylib.cmake
include/: include.hpp  raymath.h  rlgl.h
ressources/: crate.mtl  powerup.mtl
ressources/Shaders/: Light.fs  light.fs  light.vs  particles.fs  particles.vs  skybox.fs  skybox.vs
ressources/bomberman/: bomberman_000005.mtl
src/: global.hpp  include.hpp  main.cpp
src/Audio/: Sounds.cpp  Sounds.hpp
src/Buttons/: Button.cpp  Button.hpp
src/Components/: Light.cpp  Light.hpp  MainCamera3D.cpp  MainCamera3D.hpp  MeshFilter.cpp  MeshFilter.hpp  MeshRenderer.cpp  MeshRenderer.hpp  PrimitiveCollider.cpp  PrimitiveCollider.hpp  PrimitiveRenderer.cpp  PrimitiveRenderer.hpp  RigidBody.cpp  RigidBody.hpp  SphereSender.cpp  SphereSender.hpp  Template.cpp  Template.hpp  Transform.cpp  Transform.hpp
src/Components/Collider/: BoxCollider.cpp  BoxCollider.hpp  Collider.hpp  SphereCollider.cpp  SphereCollider.hpp
src/Components/Custom/: SphereSender.cpp  SphereSender.hpp
src/Components/Particles/: EmitParticle.cpp  EmitParticle.hpp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp
src/Ecs/: Component.cpp  Component.hpp  CreatePrimitive.cpp  CreatePrimitive.hpp  Engine.cpp  Engine.hpp  GameObject.cpp  GameObject.hpp  Object.cpp  Object.hpp
src/Entities/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Light.cpp  Light.hpp  RigidBody.cpp  RigidBody.hpp  Transform.cpp  Transform.hpp
src/Include/: Components.hpp  Engine.hpp  Guizmo.hpp  Include.hpp  Json.hpp  Profiler.hpp
src/Models/: ParticleTexturedModel.cpp  ParticleTexturedModel.hpp  TexturedModel.cpp  TexturedModel.hpp
src/Particles/: Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp
src/PhysicsEngine/: PhysicsAlgo.cpp  PhysicsAlgo.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp
src/PhysicsEngine/Implementations/: BoxBox.cpp  PhysicsAlgo.hpp  SphereBox.cpp  SphereSphere.cpp
src/PhysicsEngine/Solver/: ImpulseSolver.cpp  ImpulseSolver.hpp  SmoothPositionSolver.cpp  SmoothPositionSolver.hpp  Solver.hpp
src/RenderEngine/: AssetsManager.cpp  AssetsManager.hpp  ButtonsRenderer.cpp  ButtonsRenderer.hpp  DisplayManager.cpp  DisplayManager.hpp  EntityRenderer.cpp  EntityRenderer.hpp  GizmosRenderer.cpp  GizmosRenderer.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Master2DRenderer.cpp  Master2DRenderer.hpp  Master3DRenderer.cpp  Master3DRenderer.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  ParticlesRenderer.cpp  ParticlesRenderer.hpp  ShadowMapping.cpp  ShadowMapping.hpp
src/RenderEngine/ShadowMapping/: ShadowMapEntityRenderer.cpp  ShadowMapEntityRenderer.hpp  ShadowMapFrameBuffer.cpp  ShadowMapFrameBuffer.hpp  ShadowMapMasterRenderer.cpp  ShadowMapMasterRenderer.hpp
src/RenderEngine/UI/: ImGuiLayer.cpp  ImGuiLayer.hpp  UIElement.cpp  UIElement.hpp
src/RenderEngine/UI/Panels/: AssetsPanel.cpp  AssetsPanel.hpp  EnvironmentPanel.cpp  EnvironmentPanel.hpp  ImGuiPanel.cpp  ImGuiPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  ProfilerPanel.cpp  ProfilerPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  ShadowMapPanel.cpp  ShadowMapPanel.hpp  ViewPortPanel.cpp  ViewPortPanel.hpp
src/SaveLoad/: LoadSystem.cpp  LoadSystem.hpp  SaveSystem.cpp  SaveSystem.hpp
src/Shader/: DefaultShader.cpp  DefaultShader.hpp  LightShader.cpp  LightShader.hpp  ParticleShader.cpp  ParticleShader.hpp  ShadowShader.cpp  ShadowShader.hpp
src/Shaders/: LightShader.cpp  LightShader.hpp  ParticlesShader.cpp  ParticlesShader.hpp
src/SharedLibrary/: LDL.cpp  LDL.hpp  LibraryManager.cpp  LibraryManager.hpp
src/Tools/: Clock.cpp  Clock.hpp  GenMesh.cpp  GenMesh.hpp  Maths.cpp  Maths.hpp  String.cpp  String.hpp
src/Tools/SaveLoad/: JsonManager.cpp  JsonManager.hpp  LoadSystem.cpp  LoadSystem.hpp  SaveSystem.cpp  SaveSystem.hpp
